examples/test/testpolicy11392.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11392
  namespace: namespace216
spec:
  podSelector:
    matchLabels:
      key19: value26
      key32: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value22
          key47: value9
          key32: value43
      podSelector:
        matchLabels:
          key46: value30
          key26: value11
